Edit: fixed layout issues + added screen responsiveness

--- a/src/Components/main-header/Main-header.css
+++ b/src/Components/main-header/Main-header.css
@@ -10,22 +10,27 @@ html{
 }
 
 
-header {
+.header {
     background-image: url("../../../../restaurant-app/public/front-page-header.jpg");
+    background-color: #ffee00;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position :fill;
     background-size: 100%;
     height: 100vh;
 
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr 1fr;
+
+    justify-content: center;
+    align-items: center;
     
 }
 
-header .title {
-    padding-top: 50px;
+.header .title {
     display: flex;
     justify-content: center;
+    align-items: center;
 
     color: 	#ffee00;
     font-family: 'Alfa Slab One', cursive;
@@ -33,11 +38,12 @@ header .title {
     font-weight: bold;
 }
 
-header .scroll-btn{
-    margin: 150px auto;
-    padding: 30px 50px;
+.header .scroll-btn{
+    margin: 0 auto;
+   
+    padding: 30px 50px; align-self:flex-start;
     border-radius: 10px;
-    height: auto;
+    width: 300px;
     background-color: #ffee00;
 
     text-decoration: none;
@@ -50,7 +56,38 @@ header .scroll-btn{
     transition: ease-out 0.3s;
 }
 
-header .scroll-btn:hover{
+.header .scroll-btn:hover{
     box-shadow: inset 400px 0 0 0 #fd3636;
     color: #ffee00;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .header{
+        background-position: fill;
+        height: 500px;
+    }
+
+    .header .title{
+        font-size: 3em;
+    }
+
+    .header .scroll-btn{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .header{
+        background-position: fill;
+        height: auto;
+    }
+
+    .header .title{
+        font-size: 3em;
+    }
+
+    .header .scroll-btn{
+        display: none;
+    }
 }
